add form validations

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Da Serra</title>
-        <script src="script.js"></script>
+        <script src="script/main.js"></script>
         <link rel="stylesheet" href="style.css"> 
         <link rel="stylesheet" href="reset.css"> 
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
